# role-service

./: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
src/lib/: application.rs  domain.rs  env.rs  infrastructure.rs
src/lib/application/: http.rs  messaging.rs
src/lib/application/http/: auth.rs  handlers.rs  policies.rs  responses.rs
src/lib/application/http/handlers/: create_role.rs  get_roles.rs
src/lib/application/http/policies/: role_policy.rs
src/lib/application/ports/: messaging_ports.rs
src/lib/domain/: member.rs
src/lib/domain/member/: events.rs  ports.rs  services.rs
src/lib/domain/member/entities/: error.rs  model.rs
src/lib/domain/role/: entities.rs  ports.rs  services.rs
src/lib/domain/role/entities/: error.rs  model.rs  permissions.rs
src/lib/domain/role/ports/: permission.rs  role.rs
src/lib/domain/role/services/: permission.rs  role.rs
src/lib/infrastructure/db/: firestore.rs
src/lib/infrastructure/member/: db.rs
src/lib/infrastructure/member/db/: firestore_member_repository.rs
src/lib/infrastructure/role/: db.rs
src/lib/infrastructure/role/db/: firestore_role_repository.rs
