[package]
name = "role"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "role-server"

[lib]
path = "src/lib/lib.rs"
name = "role"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
firestore = "0.44.0"
futures = "0.3.31"
google-cloud-googleapis = "0.16.0"
google-cloud-pubsub = "0.30.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
futures-util = "0.3.31"
reqwest = "0.12.9"
